@@ -45,5 +45,9 @@
     <div class="div">Div 2</div>
     <div class="div">Div 3</div>
 
+    <span class="span">Span 1</span>
+    <span class="span">Span 2</span>
+    <span class="span">Span 3</span>
+
   </body>
 </html>
