@@ -114,3 +114,15 @@ end
 Then(/^the text of div (\d+) should be "([^"]*)"$/) do |div_num, text|
   expect(@elements[div_num.to_i - 1].text).to eql text
 end
+
+When(/^I select the spans with class "([^"]*)"$/) do |class_name|
+  @elements = @page.span_elements(:class => class_name)
+end
+
+Then(/^I should have (\d+) spans$/) do |num_spans|
+  expect(@elements.size).to eql num_spans.to_i
+end
+
+Then(/^the text of span (\d+) should be "([^"]*)"$/) do |span_num, text|
+  expect(@elements[span_num.to_i - 1].text).to eql text
+end
