@@ -7,6 +7,7 @@
   * Added #checkbox_elements to ElementLocators
   * Added #radio_button_elements to ElementLocators
   * Added #div_elements to ElementLocators
+  * Added #span_elements to ElementLocators
 === 2016-11-15
 * Enhancements
   * Added #button_elements to ElementLocators
